--- a/content/_includes/fluid/component-docs/radio.html
+++ b/content/_includes/fluid/component-docs/radio.html
@@ -1,4 +1,4 @@
-<h2 id="radio" class="section-header">Radio</h2>
+<h2 id="radio" class="section-header">Radio2</h2>
 
 <a target="_blank" class="improve-v2-docs" href="https://github.com/ionic-team/ionic-site/edit/master/content/_includes/fluid/component-docs/radio.html">
   Improve this Doc
